[gd_scene load_steps=4 format=3 uid="uid://swt7b4h3gvl4"]

[ext_resource type="Texture2D" uid="uid://c42tbqpxsx2bv" path="res://assets/sprites/spells/pestilence/pestilence_circle.png" id="1_g44hw"]
[ext_resource type="Script" path="res://scripts/spells/pestilence.gd" id="1_lp2ss"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kfx2d"]
radius = 64.0

[node name="Pestilence" type="Node2D"]
script = ExtResource("1_lp2ss")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_g44hw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kfx2d")

[node name="DamageRate" type="Timer" parent="."]
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageRate" to="." method="_on_damage_rate_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
